--- a/Week1/Introduction_to_Pandas.ipynb
+++ b/Week1/Introduction_to_Pandas.ipynb
@@ -61,7 +61,9 @@
       },
       "source": [
         "# Week 1\n",
-        "# `Pandas`, Data Analysis library\n"
+        "# `Pandas`, Data Analysis library\n",
+        "\n",
+        "https://www.learndatasci.com/tutorials/python-pandas-tutorial-complete-introduction-for-beginners/\n"
       ]
     },
     {
